# pikaxe

./: Cargo.toml  README.md  TODO.md
apps/cli/audio_tool/: Cargo.toml
apps/cli/audio_tool/src/apps/: decode.rs  encode.rs
apps/cli/mesh_tool/: Cargo.toml
apps/cli/mesh_tool/src/apps/: anim.rs  milo2gltf.rs  mod.rs  model2group.rs
apps/cli/scene_tool/: Cargo.toml
apps/cli/scene_tool/src/: main.rs
apps/cli/scene_tool/src/apps/: dir2milo.rs  milo2dir.rs  milo2kr.rs  mod.rs  savemilo.rs
core/grim/: Cargo.toml
core/grim/src/model/: export.rs  import.rs  mod.rs
core/grim/src/scene/: io.rs  mod.rs  object.rs
core/grim/src/scene/char_bone/: io.rs  mod.rs
core/grim/src/scene/char_bones_samples/: io.rs  mod.rs
core/grim/src/scene/char_clip/: io.rs
core/grim/src/scene/char_clip_samples/: io.rs  mod.rs
core/grim/src/scene/mesh/: io.rs
core/grim/src/texture/: dxt.rs
core/grim_gltf/src/: lib.rs
core/grim_macros/: Cargo.toml
core/grim_midi/src/: io.rs
core/grim_traits/src/scene/: char_bone.rs  common.rs
core/pikaxe/: Cargo.toml
core/pikaxe/benches/: texture_benchmark.rs
core/pikaxe/src/: lib.rs
core/pikaxe/src/dta/: parser.rs
core/pikaxe/src/model/: export.rs  gltf.rs  import.rs
core/pikaxe/src/scene/: io.rs  meta.rs  mod.rs  object.rs
core/pikaxe/src/scene/anim/: io.rs  mod.rs
core/pikaxe/src/scene/band_placer/: io.rs  mod.rs
core/pikaxe/src/scene/cam/: io.rs  mod.rs
core/pikaxe/src/scene/char_bone/: io.rs  mod.rs
core/pikaxe/src/scene/char_bones_samples/: io.rs  mod.rs
core/pikaxe/src/scene/char_clip/: io.rs  mod.rs
core/pikaxe/src/scene/char_clip_samples/: io.rs  mod.rs
core/pikaxe/src/scene/char_hair/: io.rs  mod.rs
core/pikaxe/src/scene/char_lip_sync/: io.rs  mod.rs
core/pikaxe/src/scene/color_palette/: io.rs  mod.rs
core/pikaxe/src/scene/cube_tex/: io.rs  mod.rs
core/pikaxe/src/scene/draw/: io.rs  mod.rs
core/pikaxe/src/scene/group/: io.rs  mod.rs
core/pikaxe/src/scene/mat/: io.rs  mod.rs
core/pikaxe/src/scene/mesh/: io.rs  mod.rs
core/pikaxe/src/scene/mesh_anim/: io.rs  mod.rs
core/pikaxe/src/scene/morph/: io.rs  mod.rs
core/pikaxe/src/scene/p9_song_pref/: mod.rs
core/pikaxe/src/scene/poll/: mod.rs
core/pikaxe/src/scene/prop_anim/: io.rs  mod.rs
core/pikaxe/src/scene/synth_sample/: io.rs  mod.rs
core/pikaxe/src/scene/tex/: mod.rs
core/pikaxe/src/scene/trans/: io.rs  mod.rs
core/pikaxe/src/scene/trans_anim/: io.rs  mod.rs
core/pikaxe/src/texture/: io.rs
core/pikaxe_gltf/: Cargo.toml
core/pikaxe_macros/: Cargo.toml
core/pikaxe_macros/src/: lib.rs
core/pikaxe_macros/src/scene/: anim.rs  draw.rs  mesh.rs  trans.rs
core/pikaxe_midi/: Cargo.toml
core/pikaxe_traits/: Cargo.toml
core/pikaxe_traits/src/scene/: common.rs  mod.rs  trans.rs
scripts/: README.md  read_ark.py
utils/anim_preview/: Cargo.toml
utils/anim_preview/src/: main.rs
utils/lipsync_preview/: Cargo.toml
utils/lipsync_preview/src/: app.rs  main.rs
utils/milo_export/: Cargo.toml
utils/milo_export/src/: helpers.rs  main.rs
utils/shared/: Cargo.toml
utils/shared/src/: lib.rs
