[package]
name = "pikaxe"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
bitstream-io = { version = "2.5.3", optional = true }
flate2 = "1.0.33"
fon = { version = "0.6.0", optional = true }
gltf = { workspace = true, optional = true }
gltf-json = { workspace = true, optional = true }
pikaxe_gltf = { path = "../pikaxe_gltf", optional = true }
pikaxe_macros = { path = "../pikaxe_macros" }
pikaxe_midi = {path = "../pikaxe_midi", optional = true }
pikaxe_traits = { path = "../pikaxe_traits" }
half = { version = "2.4.1", default-features = false }
image = { version = "0.25.2", default-features = false, features = [ "png" ] }
itertools = { workspace = true }
k = { optional = true, version = "0.32.0" }
lazy_static = { workspace = true }
log = { workspace = true }
nalgebra = { version = "0.33.0", optional = true }
nom = "7.1.3"
# pyo3 = { version = "0.17.3", optional = true, features = [ "extension-module" ] }
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "cfg-feature-pyo3", optional = true, features = [ "experimental-inspect", "extension-module" ] }
rayon = "1.10.0"
regex = { version = "1.10.6", default-features = false, features = [ "std", "unicode" ] }
serde = { optional = true, workspace = true }
texpresso = { version = "2.0.1", features = [ "rayon" ] }
thiserror = { workspace = true }
wav = { version = "1.0.1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[features]
audio = [ "bitstream-io", "fon", "wav" ]
audio_experimental = []
midi = [ "pikaxe_midi" ]
model = [ "gltf", "gltf-json", "pikaxe_gltf", "k", "nalgebra", "serde" ]
python = [ "pyo3" ]

[[bench]]
name = "texture_benchmark"
harness = false

[lib]
bench = false
crate-type = [ "lib", "cdylib" ]

[lints]
workspace = true
