[package]
name = "anim_preview"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pikaxe = { workspace = true }
keyframe = "1.1.1"
nalgebra = "0.33.0"
rerun = { version = "0.18.0", features = [ "native_viewer" ] }
shared = { path = "../shared" }

[lints]
workspace = true
