[package]
name = "lipsync_preview"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pikaxe = { workspace = true, features = [ "audio" ] }
eframe = "0.28.1"
egui_plot = "0.28.1"
keyframe = "1.1.1"
nalgebra = "0.33.0"
#rerun = "0.2.0"
shared = { path = "../shared" }

[lints]
workspace = true
