[package]
name = "audio_tool"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
pikaxe = { workspace = true, features = [ "audio" ] }
thiserror = { workspace = true }

[features]
encode = [ "pikaxe/audio_experimental" ]

[lints]
workspace = true